# proximity-service

./: .exmaple.env  .gitignore  Readme.md  docker-compose.yml  start-all.sh
scripts/: genData.js  package-lock.json  package.json
services/api/: Cargo.toml  Dockerfile
services/api/src/: config.rs  dbs.rs  main.rs  mongo.rs  path_finder.rs  request.rs  response.rs  router.rs
services/client/: .eslintrc.cjs  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  vite.config.ts
services/client/.svelte-kit/: ambient.d.ts
services/client/src/: app.pcss
services/client/src/lib/: utils.ts
services/client/src/lib/components/actions/: actions.svelte  index.ts
services/client/src/lib/components/business-carousel/: businessCarousel.svelte  index.ts
services/client/src/lib/components/business-list/: business-list.svelte  index.ts
services/client/src/lib/components/config-dialog/: configDialog.svelte  index.ts
services/client/src/lib/components/footer/: footer.svelte
services/client/src/lib/components/header/: header.svelte
services/client/src/lib/components/ui/business-card/: business-card.svelte  index.ts
services/client/src/lib/components/ui/carousel/: carousel-content.svelte
services/client/src/lib/components/ui/typography/: SH4.svelte  index.ts  small.svelte
services/client/src/lib/shared/: api.ts  general.ts
services/client/src/lib/stores/: config.ts  message.ts  ui.ts  window.ts
services/client/src/lib/types/: api.d.ts  business.d.ts  stores.d.ts
services/client/src/routes/: +layout.svelte  +page.svelte
services/lbs/: Cargo.toml  Dockerfile
services/lbs/src/: config.rs  dbs.rs  main.rs  request.rs  response.rs
services/proxy/: Dockerfile  proxy.conf
