[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.1"
tokio = { version = "1", features = ["full"] }
bson = { version = "2", features = [
  "chrono-0_4",
] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
# serde_json is just for the example, not required in general
serde_json = "1.0"
[env]
PORT = 8081
MONGODB_URI = 'mongodb://localhost:27017'
