[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.1"
tokio = { version = "1", features = ["full"] }
bson = { version = "2", features = [
  "chrono-0_4",
] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde_json = "1.0"

[env]
# example envs
PORT = 8081
MONGODB_URI = 'mongodb://root:password@localhost:27017'
REDIS_BUSINESS_URI = 'redis://root:password@localhost:6378'
