[package]
name = "api"
description = "General API that provides CRUD operations on businesses"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.1"
tokio = { version = "1", features = ["full"] }
bson = { version = "2", features = [
  "chrono-0_4",
] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
redis = { version = "0.25.0", features = ["tokio-comp"] }
serde_json = "1.0"
